Added bootstrap import

--- a/tarkov-together/src/App.css
+++ b/tarkov-together/src/App.css
@@ -15,7 +15,6 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,6 +23,9 @@
   color: white;
 }
 
+.App-body{
+  background-color: #282c34;
+}
 .App-link {
   color: #61dafb;
 }
